--- a/SandFall/styles/base.css
+++ b/SandFall/styles/base.css
@@ -7,32 +7,10 @@ html {
 
 body {
     margin: 0;
-    font-family: sans-serif;
+    font-family: 'Montserrat', Arial, sans-serif;
     background-color: #000;
     color: #fff;
     overflow-x: hidden;
-}
-
-/* Font faces */
-@font-face {
-    font-family: 'Raylig';
-    src: url('../fonts/raylig.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: url('../fonts/montserrat.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Inria';
-    src: url('../fonts/inria.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
 }
 
 /* Global utility classes */
